--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/express": "^1.5.0",
     "body-parser": "^2.2.0",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "micro": "^10.0.1",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
     "svix": "^1.66.0"
