--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.31.4",
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "motion": "^12.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
   },
