--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "micro": "^10.0.1",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "svix": "^1.66.0"
   },
   "devDependencies": {
