--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
+    "stripe": "^18.2.1",
     "svix": "^1.66.0"
   },
   "devDependencies": {
